<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" formatted="false" tools:ignore="MissingTranslation,DuplicateDefinition">
    <!--****************************************************服务端状态码***************************************************************-->
    <string name="app_error_101">Please check whether the network is connected</string>
    <string name="app_error_102">The request failed, please try again later</string>
    <string name="app_error_403">Please wait, the service is under maintenance</string>
    <!--app loading-->
    <string name="app_loading">Loading...</string>
    <!--退出-->
    <string name="app_exit">Press again to exit</string>
    <string name="app_exit_hint">Confirm to log out of VPN?</string>

    <!--连接-->
    <string name="connect_other">Do you want to reconnect to another server?</string>
    <string name="connect_create">Creating VPN</string>
    <string name="connect_wait">Please wait</string>

    <string name="connect_down" formatted="false">You still have <Data><![CDATA[<font color=\'#9C6DFD\'>30 minutes</font>]]></Data> to use Whether to increase the free time</string>
    <string name="connect_down_end" formatted="false">The usage time is over Whether to get free duration</string>
    <string name="connect_free_time">Go to Get free time</string>
    <string name="connect_no_thanks">No, thanks</string>

    <string name="connect">Connect</string>
    <string name="connecting">Connecting</string>
    <string name="disconnect">Disconnect</string>

    <!--断开-->
    <string name="disconnect_confirm">Confirmation</string>
    <string name="disconnect_hint">Are you going to turn off the VPN?</string>
    
    <!--广告提示-->
    <string name="ad_hint1">Couldn\'t find the video resource,please try again later!</string>
    <string name="ad_hint2">You need to watch the video in full to get time.</string>
    <string name="ad_hint3">There are no reward video resources available.\nYou can try again tomorrow.</string>

    <!--公用-->
    <string name="common_yes">YES</string>
    <string name="common_no">NO</string>

    <string name="exp_error1">Operation is not authorized</string>
    <string name="exp_error2">Request denied</string>
    <string name="exp_error3">Resource does not exist</string>
    <string name="exp_error4">Server execution timeout</string>
    <string name="exp_error5">Server internal error</string>
    <string name="exp_error6">Server unavailable</string>
    <string name="exp_error7">Network error, please try again later</string>
    <string name="exp_error8">Parsing error</string>
    <string name="exp_error9">Connection failed</string>
    <string name="exp_error10">Certificate verification failed</string>
    <string name="exp_error11">Connection timed out</string>
    <string name="exp_error12">Abnormal network connection</string>
    <string name="exp_error13">Network error, please try again later</string>

    <!--Catch log-->
    <string name="error_activity_error_occurred_explanation">An unexpected error occurred. \nSorry for the inconvenience.</string>
    <string name="error_activity_restart_app">Restart</string>
    <string name="error_activity_close_app">Turn off an app</string>
    <string name="error_activity_error_details">Error log</string>
    <string name="error_activity_error_details_title">Error details</string>
    <string name="error_activity_error_details_close">Shut down</string>
    <string name="error_activity_error_details_copy">Copy log</string>
    <string name="error_activity_error_details_copied">Copy log</string>
    <string name="error_activity_error_details_clipboard_label">Error message</string>
</resources>
