<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rect_white_15dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_hint_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/dp_60"
            android:layout_marginTop="@dimen/dp_25"
            android:layout_marginRight="@dimen/dp_60"
            android:layout_marginBottom="@dimen/dp_20"
            android:gravity="center"
            android:text="@string/disconnect_confirm"
            android:textColor="@color/black3"
            android:textSize="@dimen/text16"
            android:textStyle="bold" />

        <TextView
            android:textColor="@color/black3"
            android:textSize="@dimen/text13"
            android:text="@string/disconnect_hint"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_25"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_no"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:layout_marginRight="@dimen/dp_5"
                android:layout_weight="1"
                android:background="@drawable/bg_rect_gray_12dp"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/common_no"
                android:textColor="@color/black3"
                android:textSize="@dimen/text13" />

            <TextView
                android:id="@+id/tv_yes"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_weight="1"
                android:background="@drawable/bg_rect_main_12dp"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/common_yes"
                android:textColor="@color/white"
                android:textSize="@dimen/text13" />
        </LinearLayout>

    </LinearLayout>
</layout>