<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_rect_white_15dp">

        <ImageView
            android:id="@+id/logo"
            android:src="@drawable/app_logo"
            android:layout_marginTop="@dimen/dp_25"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_hint_content"
            android:layout_width="wrap_content"
            android:textColor="@color/black3"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/dp_20"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/text16"
            android:lineSpacingExtra="@dimen/dp_5"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/app_exit_hint"
            android:layout_height="wrap_content"/>


        <TextView
            android:id="@+id/tv_yes"
            android:textSize="@dimen/text13"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:background="@drawable/bg_rect_main_20dp"
            android:text="@string/common_yes"
            android:layout_marginLeft="@dimen/dp_70"
            android:layout_marginRight="@dimen/dp_70"
            android:layout_marginTop="@dimen/dp_65"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/dp_15"
            android:gravity="center"
            android:includeFontPadding="false"
            android:layout_height="@dimen/dp_40"/>

        <TextView
            android:id="@+id/tv_no"
            android:textSize="@dimen/text13"
            android:textColor="@color/black3"
            android:layout_width="match_parent"
            android:background="@drawable/bg_rect_gray_20dp"
            android:text="@string/common_no"
            android:layout_marginLeft="@dimen/dp_70"
            android:layout_marginRight="@dimen/dp_70"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/dp_50"
            android:gravity="center"
            android:includeFontPadding="false"
            android:layout_height="@dimen/dp_40"/>

    </LinearLayout>
</layout>