<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.hzzt.powerful.vmodel.MainVm" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent">

        <com.hzzt.common.widget.head.HeaderView
            android:layout_width="match_parent"
            app:titleName="Catch Log"
            app:isBack="false"
            android:layout_height="wrap_content"/>

        <include layout="@layout/view_common_line_1px"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/dp_16"
                android:layout_gravity="center_vertical">

                <ImageView
                    android:id="@+id/error_activity_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_16"
                    android:gravity="center"
                    android:text="@string/error_activity_error_occurred_explanation"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/error_activity_restart_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_16"
                    android:text="@string/error_activity_close_app" />

                <Button
                    android:id="@+id/error_activity_more_info_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/error_activity_error_details"
                    android:textColor="@color/main_color" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>